--- a/java/java/src/main/resources/templates/signup.html
+++ b/java/java/src/main/resources/templates/signup.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,16 +8,16 @@
 <body>
     <div>
         <h1>Register Here!</h1>
-        <form action="/register" method="post">
+        <form th:action="@{'/register'}" th:object="${userForm}" method="post">
            
-            <label for="username">Username:</label>
-            <input type="text" id="username" name="username" required><br><br>
+            <label for="name">Name:</label>
+            <input type="text" id="name" name="name" th.field="*{name}" required><br><br>
 
             <label for="email">Email:</label>
-            <input type="email" id="email" name="email" required><br><br>
+            <input type="email" id="email" name="email" th.field="*{email}" required><br><br>
 
             <label for="password">Password:</label>
-            <input type="password" id="password" name="password" required><br><br>
+            <input type="password" id="password" name="password" th.field="*{password}" required><br><br>
 
             <button type="submit">Register</button>
             <button type="reset">Reset</button>
