--- a/java/java/src/main/resources/templates/user.html
+++ b/java/java/src/main/resources/templates/user.html
@@ -1,11 +1,19 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>User Page</title>
 </head>
 <body>
-    <h1>This is User Page</h1>
+    <h1>Welcome! You are logged in.</h1>
+
+    <ul>
+        <li><a th:href="@{/user/student}">Student Details</a></li>
+        <li><a th:href="@{/user/showStudent}">Show Students</a></li>
+    </ul>
+
+    <br/>
+    <a th:href="@{/logout}">Logout</a>
 </body>
 </html>
